test/files/neg/t1565-alt.check
t1565-alt.scala:3: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
trait SelfFirst { (this: Int, that: Int) =>
                       ^
t1565-alt.scala:6: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
trait SelfSecond { (that: Int, this: Int) =>
                                   ^
2 errors
